--- a/src/global.scss
+++ b/src/global.scss
@@ -54,7 +54,7 @@ ion-header {
   --border-color: #CBCBCB;
 }
 
-.payment-methods-modal .modal-wrapper, .payment-methods-modal .modal-shadow,{
+.payment-methods-modal .modal-wrapper, .payment-methods-modal .modal-shadow{
   height: 60vh;
   bottom: 0;
   position: absolute;
